--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>react-loadable-example</title>
+    <title>react-loadable-demo</title>
     <style>
       body {
         font: normal 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -10,6 +10,9 @@
         margin: 0 auto;
       }
     </style>
+     <script src="//cache.soso.com/wenwen/deploy/js/jquery/jquery-1.11.1.min.js"></script>
+      <link href="//cache.soso.com/wenwen/deploy/js/bootstrap3/bootstrap.min.css" rel="stylesheet"></link>
+      <link rel="stylesheet" type="text/css" href="./css/style.css">
   </head>
   <body>
     <div id="root"></div>
