--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,25 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>react-loadable-demo</title>
-    <style>
-      body {
-        font: normal 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-        max-width: 600px;
-        margin: 0 auto;
-      }
-    </style>
-     <script src="//cache.soso.com/wenwen/deploy/js/jquery/jquery-1.11.1.min.js"></script>
-      <link href="//cache.soso.com/wenwen/deploy/js/bootstrap3/bootstrap.min.css" rel="stylesheet"></link>
-      <link rel="stylesheet" type="text/css" href="./css/style.css">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="text/javascript" src="scripts/bundle-main.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title>react-loadable-demo</title>
+  <style>
+    body {
+      font: normal 1em/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+      max-width: 100%;
+    }
+  </style>
+  <script src="https://cache.soso.com/wenwen/deploy/js/jquery/jquery-1.11.1.min.js"></script>
+  <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+<link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">
+
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="text/javascript" src="scripts/bundle-main.js"></script>
+</body>
+
 </html>
